--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
         <div class="contact-info">
           <h4>Kathmandu, Bagmati Province, Nepal</h4>
 
-          <span><i class="bi bi-telephone-fill"></i>9842622126</span>
-          <span><i class="bi bi-envelope-at"></i>rohanpoudel88@gmail.com</span>
+          <span><i class="bi bi-telephone-fill"></i>98426XXXX</span>
+          <span><i class="bi bi-envelope-at"></i>rohanpoudel545@gmail.com</span>
         </div>
         <div class="location">
           <iframe
@@ -176,29 +176,8 @@
           ></iframe>
         </div>
       </div>
-    </div>
-
-    <div class="con-me">
-      <div class="container">
-        <form action="form-handler.php" method="post">
-          <label>First Name</label>
-          <input type="text" name="name" placeholder="Your Name" required />
-
-          <label>Email</label>
-          <input type="email" name="email" placeholder="Your Email" required />
-          <label>Subject</label>
-          <input type="text" name="subject" placeholder="Subject" required />
-
-          <label>Message</label>
-          <textarea
-            placeholder="Message "
-            name="message"
-            style="height: 200px"
-            required
-          ></textarea>
-
-          <input type="submit" value="Submit" />
-        </form>
+      <div class="goconpage">
+        <button><a href="contact.html">GET IN TOUCH</a></button>
       </div>
     </div>
 
