--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="contact.css" />
     <title>Contact Form</title>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114388936477500"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -13,12 +18,19 @@
       <button><a href="index.html">GO HOME</a></button>
       <form>
         <h2>Contact Us</h2>
-        <input class="name" type="text" name="name" placeholder=" Your Name" />
+        <input
+          class="name"
+          type="text"
+          name="name"
+          placeholder=" Your Name"
+          required
+        />
         <input
           class="email"
           type="email"
           name="email"
           placeholder="Your Email"
+          required
         />
         <textarea
           class="text"
@@ -26,20 +38,22 @@
           cols="20"
           rows="30"
           placeholder=" Your Message"
+          required
         ></textarea>
 
-        <input type="submit" class="submit" />
+        <input type="submit" class="submit" value="Send" />
       </form>
     </div>
+
     <script>
       let url =
-        "https://script.google.com/macros/s/AKfycbxFznMRgxP2pS_DZdVTegUEaY0IT2Mc-_GDh7M1fpdjkfWVViYYtiA0wpH1TPUUeAVQ/exec";
+        "https://script.google.com/macros/s/AKfycbwd4c6lzxSB-JWp0hiPyHitFmVTmi5I0jFVhz-wxes3s8bEPV2sGfEEuBBqhfig6JVz/exec";
       let form = document.querySelector("form");
       let submit = document.querySelector(".submit");
       let message = document.querySelector(".message");
       form.addEventListener("submit", (e) => {
         e.preventDefault();
-        submit.value = "submitting..";
+        submit.value = "Submited";
         fetch(url, {
           method: "POST",
           body: new FormData(form),
@@ -55,5 +69,11 @@
           });
       });
     </script>
+    <!-- <script>
+    //   function submit_form() {
+    //     document.formu1.submit();
+    //     document.formu1.reset();
+    //   }
+    // </script> -->
   </body>
 </html>
