--- a/index.html
+++ b/index.html
@@ -64,15 +64,18 @@
       <h1>ABOUT ME</h1>
       <div class="about-ctn">
         <p>
-          I’m a nice fun and friendly person, I’m honest and punctual, I work
-          well in a team but also on my own as I like to set myself goals which
-          I will achieve, I have good listening and communication skills. <br />
+          I am Rohan Poudel, a college student with a dream of becoming a
+          programmer. I am dedicated and driven to achieve my goals, and I am
+          constantly seeking out new opportunities to learn and grow as a
+          developer. I am a hardworking and motivated individual, and I am
+          determined to succeed in the field of programming. <br />
           <br />
-
-          I have a creative mind and am always up for new challenges. I am well
-          organized and always plan ahead to make sure I manage my time well.
+          I am always looking for ways to improve my skills and further my
+          knowledge, and I am dedicated to becoming the best programmer I can
+          be. With my determination and dedication, I am well on my way to
+          achieving my dream of becoming a successful programmer.
         </p>
-        <img src="images/aimg.webp" alt="" />
+        <img src="images/rohan1.jpg" alt="" width="300px" />
       </div>
     </div>
     <div id="skill" class="my-skill">
@@ -159,14 +162,16 @@
       <div class="contact-head"><h1>CONTACT</h1></div>
       <div class="con-loc">
         <div class="contact-info">
-          <h4>Kathmandu, Bagmati Province, Nepal</h4>
+          <h4>Biratnagar, Province No.1, Nepal</h4>
 
           <span><i class="bi bi-telephone-fill"></i>98426XXXX</span>
-          <span><i class="bi bi-envelope-at"></i>rohanpoudel545@gmail.com</span>
+          <span
+            ><i class="bi bi-envelope-at"></i>contactrohan2005@gmail.com</span
+          >
         </div>
         <div class="location">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3335.003176772669!2d85.34499909282117!3d27.676732001979158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19f2804a02bf%3A0x85468199859b2d8d!2sKoteshwor%2C%20Kathmandu%2044600!5e0!3m2!1sen!2snp!4v1669956183148!5m2!1sen!2snp"
+            src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d7140.826468509031!2d87.28226327823252!3d26.506816904878146!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snp!4v1672729042560!5m2!1sen!2snp"
             width="600"
             height="450"
             style="border: 0"
@@ -204,7 +209,7 @@
         value: 0.6,
       });
       $(".js .bar").circleProgress({
-        value: 0.2,
+        value: 0.05,
       });
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
