--- a/index.html
+++ b/index.html
@@ -18,20 +18,14 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <!-- Load font awesome icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- CSS LINK -->
     <link rel="stylesheet" href="style.css" />
     <title>Rohan Info</title>
-    <!-- ADSENSE -->
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114388936477500"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      async
-      custom-element="amp-auto-ads"
-      src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"
-    ></script>
   </head>
   <body>
     <!-- TO THE TOP -->
@@ -59,6 +53,26 @@
         <h1>I AM A CODER</h1>
         <p>WEB DESIGNER.EDITOR.LEANER</p>
       </div>
+    </div>
+    <!-- The social media icon bar -->
+    <div class="icon-bar">
+      <a href="https://www.facebook.com/rohan.poudel.7587" class="facebook"
+        ><i class="fa fa-facebook"></i
+      ></a>
+      <a href="https://twitter.com/rohan_poudel007" class="twitter"
+        ><i class="fa fa-twitter"></i
+      ></a>
+      <a href="https://github.com/rohan7408" class="git"
+        ><i class="bi bi-github"></i
+      ></a>
+      <a
+        href="https://www.linkedin.com/in/rohan-poudel-426628212/"
+        class="linkedin"
+        ><i class="fa fa-linkedin"></i
+      ></a>
+      <a href="https://stackoverflow.com/users/20917044/rohan" class="stack"
+        ><i class="bi bi-stack-overflow"></i
+      ></a>
     </div>
     <div id="about" class="about">
       <h1>ABOUT ME</h1>
